# loxodo-curses

./: .flake8  .gitignore  README.rst  pyproject.toml
contrib/: dist-pex.sh  dist-pyi.sh  pyi.py
loxodo_curses/: __init__.py  __main__.py  curses_utils.py  main_curses.py  utils.py  vault.py  vault_utils.py
loxodo_curses/curses_utils/: __init__.py
loxodo_curses/twofish/: twofish.py  twofish_cbc.py
